add icon to mission card

--- a/app/views/list.pug
+++ b/app/views/list.pug
@@ -42,7 +42,7 @@ block foot-script
                     <div class="card-body">
                       <div class="row">
                         <div class="col-xs-3 col-md-2 col-xl-1">
-                          // File Type ICON
+                          <img src="#{baseUrl('icons/${type}')}" />
                         </div>
                         <div class="col-xs-9 col-md-10 col-xl-11">
                           <label class="d-block mb-3">${filename}</label>
