--- a/app/views/frame.pug
+++ b/app/views/frame.pug
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css' crossorigin='anonymous' referrerpolicy='no-referrer')
     script(type='text/javascript' src='//code.jquery.com/jquery-3.6.0.min.js' crossorigin='anonymous' referrerpolicy='no-referrer')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css' crossorigin='anonymous' referrerpolicy='no-referrer')
+    link(rel='stylesheet' href=baseUrl('styles/app.css'))
     link(type='image/x-icon' rel='shortcut icon' href=baseUrl('favicon.ico'))
     link(type='image/x-icon' rel='icon' href=baseUrl('favicon.ico'))
     meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
