--- a/app/views/list.pug
+++ b/app/views/list.pug
@@ -1,6 +1,16 @@
 extends ./frame.pug
 
 block body
+  style.
+    #add-mission {
+      position: fixed;
+      right: 3rem;
+      bottom: 3rem;
+      width: 3.25rem;
+      height: 3.25rem;
+      border-radius: 50%;
+    }
+
   .container
     #download-missions
       #no-mission.d-flex.justify-content-center.align-items-center.flex-column.py-5
@@ -8,6 +18,43 @@ block body
           path(d='M162.632 77.011c3.31-5.735 10.656-7.693 16.379-4.389l51.978 30.01c5.735 3.31 7.693 10.656 4.389 16.379l-30.01 51.978c-3.31 5.735-10.656 7.693-16.379 4.389l-51.978-30.01c-5.735-3.31-7.693-10.656-4.389-16.379l30.01-51.978zm3.723 44.885l3.08 17.998 24.669-10.06 4.186 34.748-56.58-32.667 24.645-10.02zm-103.23-7.316L5.44 145.252c-4.532 2.41-6.269 8.09-3.859 12.623l30.672 57.686c2.41 4.532 8.09 6.269 12.623 3.859l57.686-30.672c4.532-2.41 6.269-8.09 3.859-12.623L75.748 118.44c-2.41-4.532-8.09-6.269-12.623-3.859zm-15.52 86.4c-2.623 1.395-5.91.39-7.304-2.233l-10.14-19.071c-6.993-13.152-1.988-29.523 11.163-36.516 13.152-6.992 29.523-1.987 36.516 11.164l10.14 19.072c1.395 2.622.39 5.909-2.233 7.303l-11.125 5.915-8.45-15.893 7.946-4.225-4.225-7.946c-4.669-8.781-15.563-12.112-24.343-7.443-8.781 4.669-12.112 15.563-7.443 24.343l4.225 7.947 7.947-4.225 8.45 15.893-11.125 5.915zM69.311.145c-4.671-.824-9.108 2.232-9.91 6.782L47.69 73.1c-.803 4.55 2.32 8.939 6.992 9.762l51.007 8.994c4.671.824 9.15-2.225 9.952-6.775l8.752-49.634-21.106-29.31L69.311.145zm24.704 34.819l4.168-23.636 19.468 27.803-23.636-4.167zm74.63 175.393l11.988 16.163-11.817 2.084-11.99-16.164-8.862 1.563 11.988 16.164-11.817 2.084-11.99-16.164-8.862 1.563 11.989 16.164-11.818 2.083-11.99-16.163-2.954.52c-5.14.907-8.147 5.378-7.3 10.427l8.856 50.225c.889 5.04 5.286 8.207 10.426 7.3l64.998-11.46c5.14-.907 8.189-5.386 7.3-10.427l-10.419-59.088-17.726 3.126z' fill='#9AA0A6')
         p There is not download content yet...
       #mission-list.d-none.py-3
+    button#add-mission.btn.btn-primary(type='button' data-bs-toggle='modal' data-bs-target='#add-mission-modal')
+      svg(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512')
+        path(fill='currentColor' d='M376 232H216V72c0-4.42-3.58-8-8-8h-32c-4.42 0-8 3.58-8 8v160H8c-4.42 0-8 3.58-8 8v32c0 4.42 3.58 8 8 8h160v160c0 4.42 3.58 8 8 8h32c4.42 0 8-3.58 8-8V280h160c4.42 0 8-3.58 8-8v-32c0-4.42-3.58-8-8-8z')
+
+  #add-mission-modal.modal.fade(tabindex='-1')
+    .modal-dialog
+      form.modal-content(action=baseUrl('mission/create') method='post')
+        .modal-header
+          h5.modal-title Add download mission
+          button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+        .modal-body
+          .mb-3
+            label(for='input-url') URL
+            input#input-url.form-control(type='url' placeholder='https://.....')
+          .mb-3
+            label(for='input-filename') Filename
+            input#input-filename.form-control(type='text' placeholder='Filename')
+
+        .modal-footer
+          button.btn.btn-outline-secondary(type='button' data-bs-dismiss='modal') Close
+          button.btn.btn-primary(type='submit')
+            i.fas.fa-download.me-1
+            | Start Download
+
+  #remove-all-modal.modal.fade(tabindex='-1')
+    .modal-dialog
+      form.modal-content(action=baseUrl('mission/remove-all') method='post')
+        .modal-header
+          h5.modal-title Confirm to remove all mission
+          button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+        .modal-body
+          p Do you confirm to remove all mission ?
+        .modal-footer
+          button.btn.btn-outline-secondary(type='button' data-bs-dismiss='modal') No
+          button.btn.btn-danger(type='submit')
+            i.fas.fa-trash.me-1
+            | Confirm remove
 
 block foot-script
   script(type='text/javascript').
@@ -41,10 +88,10 @@ block foot-script
                   <div id="file-${fileId}" class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xs-3 col-md-2 col-xl-1">
+                        <div class="d-none col-lg-2 d-lg-block">
                           <img src="#{baseUrl('icons/${type}')}" />
                         </div>
-                        <div class="col-xs-9 col-md-10 col-xl-11">
+                        <div class="col-12 col-lg-10">
                           <label class="d-block mb-3">${filename}</label>
                           <a class="d-block mb-3" href="${url}" target="_blank">${url}</a>
                           <div class="progress ${ (!['error', 'finished'].includes(status) ? '' : 'd-none') } mb-3">
@@ -54,7 +101,7 @@ block foot-script
                             <a href="${dlUrl}${fileId}" class="btn btn-primary me-3" target="_blank">
                               <i class="fas fa-download"></i> Download
                             </a>
-                            <a href="#" class="card-link" data-event="delete-mission">
+                            <a href="#" class="card-link text-danger" data-event="delete-mission">
                               <i class="fas fa-trash"></i> Delete
                             </a>
                           </div>
