--- a/app/views/partials/navbar.pug
+++ b/app/views/partials/navbar.pug
@@ -2,4 +2,15 @@
   .container
     a.navbar-brand.d-flex.align-items-center(href='#')
       strong Remote Downloader
-    ul.nav.col-12.col-lg-auto.me-lg-auto.mb-2.justify-content-center.mb-md-0
+    ul.nav.ms-lg-auto.mb-2.justify-content-center.mb-md-0
+      if loggedIn
+        li.nav-item
+          a.nav-link.text-light.px-2(
+            href=baseUrl('mission/download-all')
+            target="_blank"
+            title="Download As Package"
+          )
+            i.fas.fa-download
+        li.nav-item
+          a.nav-link.text-light.px-2(href='#' data-bs-toggle="modal" title="Remove all Downloads" data-bs-target="#remove-all-modal")
+            i.fas.fa-trash
