--- a/app/views/frame.pug
+++ b/app/views/frame.pug
@@ -12,6 +12,8 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
     meta(name='format-detection' content='telephone=no')
+    script(type='text/javascript').
+      window.baseUrl = '#{baseUrl()}';
   body
 
     include ./partials/navbar.pug
